PJM-102 fix: fix container columns on tablet design

--- a/src/widgets/gallery/ui/Gallery.module.scss
+++ b/src/widgets/gallery/ui/Gallery.module.scss
@@ -37,6 +37,6 @@
 
 @media (max-width: $vp-768) {
   .container {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
